--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,7 +89,7 @@
                                 
                                 .bttn_click {
                                     float: left;
-                                    width: 250px;
+                                    width: 200px;
                                     height: 120px;
                                     font-family: Georgia, Times, "Times New Roman", serif;
                                     font-size: 20px;
@@ -99,7 +99,10 @@
                                     text-align: center;
                                     text-decoration: none;
                                     background: #FF123D;
-                                    margin: 5px;
+                                    margin-left: 5px;
+                                    margin-right: 5px;
+                                    margin-bottom: 5px;
+                                    border-radius: 25px;
                                 }
                                 
                                 .bttn_click2 {
@@ -115,6 +118,21 @@
                                     text-decoration: none;
                                     background: #FF123D;
                                     margin: 5px;
+                                }
+
+                                .bttn_text {
+                                    line-height: 100px;
+                                    color: #fff;
+                                    text-align: center;
+                                    background: #FF123D;
+                                    border-bottom: 0;
+                                }
+
+                                .status_box_cl {
+                                    width: 250px;
+                                    max-width: 250px;
+                                    max-height: 200px;
+                                    overflow: scroll;
                                 }
                                 
                                 nav {
@@ -164,7 +182,6 @@
                                     padding-bottom: 20px;
                                     margin-bottom: 15px;
                                     line-height: 22px;
-                                    border-bottom: 2px solid #eee;
                                 }
                                 
                                 .social {
@@ -186,7 +203,9 @@
                                 .main-section {
                                     float: left;
                                     width: 100%;
+                                    /*
                                     max-width: 650px;
+                                    */
                                     padding: 30px;
                                     margin: 0 0 40px;
                                     background: #fff;
